fixed header z-index

--- a/src/assets/scss/components/Header.scss
+++ b/src/assets/scss/components/Header.scss
@@ -2,7 +2,10 @@
 @import "../parts/mixins";
 
 #topbar {
+  position: relative;
+  z-index: 2;
   @include noselect();
+
   > div {
     @include flexbox();
     max-width: 1560px;
